--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-username: minixalpha
-baseurl: /StrayBirds
+username: linxizgc
+baseurl: /mumuxi
 markdown: redcarpet
 safe: false
 pygments: true
-title: 飞鸟集
+title: 木木
